FIX: overflow y a links resolved

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -3,35 +3,9 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
-  overflow-x: hidden;
-}
-
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-y: hidden;
 }
 
 main {
   padding-top: 97px;
-  width: 100%;
+  overflow-x: hidden;
 }
-
-// MEDIA QUERY
-
-// Mobile
-
-// Tablet
-@media all and (max-width: 767px) {}
-
-// Desktop
-@media all and (max-width: 1024px) {}
